--- a/gif.css
+++ b/gif.css
@@ -1,34 +1,52 @@
-body {
-	background-image: url(nyan.png);
+html, body {
 	font-family: 'Covered By Your Grace', cursive;
 	font-size: 30px;
-	width: 100%; 
-	height: 100%;
+  	height:100%;
+  	width: 100%;
+  	margin: 0 auto;
+  	padding: 0;
+  	background-color: black;
+  	color: white;
+}
+
+nav {
+	background-color: red;
+	color: black;
+	margin: 0 auto;
+	padding: 10px;
+}
+nav h1 {
+	float: left;
+}
+nav form {
+	text-align: right;
+}
+
+#gifBody {
+	clear: both;
 }
 
 .jumbotron {
 	color: #003462;
 }
 
-#inputLabel {
-	color: white;
-}
 #gifInput {
 	margin-left: 20px;
 	margin-right: 20px;
 }
 
-#gifButton:hover {
-	background-color: yellow;
-}
-.cutegif {
+button, #submitIdea {
 	margin: 10px;
 	color: blue;
 }
 
-.cutegif:hover {
+button:hover, #submitIdea:hover {
 	background-color: blue;
 	color: white;
+}
+
+img {
+	width: 100%;
 }
 .helloGifs {
 	float: left;
